@@ -16,28 +16,26 @@
 package net.tirasa.adsddl.unit;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.Test;
 
 public class RetrieveTest extends AbstractTest {
 
-    private static final long serialVersionUID = 1L;
-
     @Test
     public void unMarshall() throws Exception {
-        final byte[] src = Files.readAllBytes(Paths.get(this.getClass().getResource(SDDL_ALL_SAMPLE).toURI()));
+        final byte[] src = Files.readAllBytes(Path.of(this.getClass().getResource(SDDL_ALL_SAMPLE).toURI()));
         UnMarshall(src);
     }
 
     @Test
     public void userChangePassword() throws Exception {
-        final byte[] src = Files.readAllBytes(Paths.get(this.getClass().getResource(DACL_ONLY_SAMPLE).toURI()));
+        final byte[] src = Files.readAllBytes(Path.of(this.getClass().getResource(DACL_ONLY_SAMPLE).toURI()));
         UserChangePassword(src);
     }
 
     @Test
     public void ucpChangeUnMarshall() throws Exception {
-        final byte[] src = Files.readAllBytes(Paths.get(this.getClass().getResource(DACL_ONLY_SAMPLE).toURI()));
+        final byte[] src = Files.readAllBytes(Path.of(this.getClass().getResource(DACL_ONLY_SAMPLE).toURI()));
         ucpChangeUnMarshall(src);
     }
 }
